# daily-study

20250411-mcp/: README.md  mini_client.py  mini_server.py
20250413-websocket/next-fastapi/backend/: .gitignore  main.py  pyproject.toml
20250413-websocket/next-fastapi/frontend/: .prettierignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
20250413-websocket/next-fastapi/frontend/src/app/: layout.tsx
20250413-websocket/next-fastapi/frontend/src/app/chat/: page.tsx
20250413-websocket/next-fastapi/frontend/src/layouts/: simple-layout.tsx
20250413-websocket/simple/: app.js  package-lock.json
20250413-websocket/simple/public/: index.html  script.js
