[project]
name = "ws-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "ffmpeg>=1.4",
    "openai>=1.73.0",
    "openai-whisper>=20240930",
    "uvicorn[standard]>=0.34.0",
]
